MDEV-32857 Assertion in new branches of MYSQL_BIN_LOG::run_commit_ordered

This MDEV-32455 assert is refined to let in the actual bug load
without firing.